--- a/MariSocketMiddleware.csproj
+++ b/MariSocketMiddleware.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MariGlobals\MariGlobals.csproj" />
+  </ItemGroup>
 </Project>
