--- a/src/MariSocketMiddleware/MariSocketMiddleware.csproj
+++ b/src/MariSocketMiddleware/MariSocketMiddleware.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MariGlobals\MariGlobals.csproj" />
+    <Reference Include="MariGlobals">
+      <HintPath>..\..\external\MariGlobals.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
