--- a/src/MariSocketMiddleware/MariSocketMiddleware.csproj
+++ b/src/MariSocketMiddleware/MariSocketMiddleware.csproj
@@ -1,10 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <ApplicationIcon />
-    <Win32Resource />
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>MariSocketMiddleware</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>renanrcp</Authors>
+    <Company>MariBot</Company>
+    <Description>Mari ASP.NET Core Middleware Event-based for WebSockets with low memory usage.</Description>
+    <Copyright>2019 - 2020 renanrcp. All rights reserved.</Copyright>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIcon>mmiddleware.jpg.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,11 +19,10 @@
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.2.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="MariGlobals" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="MariGlobals">
-      <HintPath>..\..\external\MariGlobals.dll</HintPath>
-    </Reference>
+    <None Include="mmiddleware.jpg" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
 </Project>
